--- a/inwe.css
+++ b/inwe.css
@@ -108,7 +108,7 @@ text-align: center
   height: auto;
   margin: auto;
   margin-top: 20px;
-  margin-left: 20px;
+  margin-right: 20px;
   border-radius: 5px;
   box-shadow: 4px 4px 5px magenta;
   text-align: left;
